--- a/pari_fnr/package.xml
+++ b/pari_fnr/package.xml
@@ -59,10 +59,17 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
+  <build_depend>gazebo_ros</build_depend>
+  <exec_depend>gazebo_ros</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <gazebo_ros gazebo_model_path="${prefix}/description/models"/> <!-- prefix: path to package.xml-->
+    <gazebo_ros gazebo_model_path="${prefix}/description/models/verticalSignals/TriangularSignals"/> <!-- prefix: path to package.xml-->
+    <gazebo_ros gazebo_model_path="${prefix}/description/models/verticalSignals/QuadrangularSignals"/> <!-- prefix: path to package.xml-->
+    <gazebo_ros gazebo_model_path="${prefix}/description/models/verticalSignals/CircularSignals"/> <!-- prefix: path to package.xml-->
+    <gazebo_ros gazebo_plugin_path="${prefix}/plugins"/> <!-- prefix: path to package.xml-->
   </export>
+  <!-- The export tag contains other, unspecified, tags -->
+
 </package>
